Fixed responsiveness of nav for many screen types, need to implement an alternate nav for mobile (triangles become much too small to support text).

--- a/public_html/assets/less/main.less
+++ b/public_html/assets/less/main.less
@@ -34,13 +34,13 @@
   width: 100%;
 }
 
-//#triLbl1{
-//  padding-left: 2%;
-//}
-//
-//#triLbl4{
-//  padding-right: 2%;
-//}
+#triLbl1{
+  padding-left: 2%;
+}
+
+#triLbl4{
+  padding-right: 2%;
+}
 
 .scrolledNav{
   pointer-events: none;
